chore: 불필요한 로그 정리